--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,24 @@
             <version>${org.springframework-version}</version>
         </dependency>
 
+        <!--벨리데이션-->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.2.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
         <!--스프링 시큐리티-->
         <dependency>
             <groupId>org.springframework.security</groupId>
