--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
             <version>2.12.1</version>
         </dependency>
 
+        <!--네이버-->
+        <dependency>
+            <groupId>com.github.scribejava</groupId>
+            <artifactId>scribejava-core</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
         <!--파일 업로드-->
         <dependency>
             <groupId>commons-io</groupId>
